<resources>
    <string name="app_name">Default lateral menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="version_number">1.7</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="menu_title_user_agreement">User Agreement</string>
    <string name="menu_tile_disclaimer">Disclaimer</string>
    <string name="menu_title_logout">Logout</string>
    <string name="menu_title_contact_support">Contact Support</string>
    <string name="menu_title_explore">Explore</string>
    <string name="menu_title_transfer_search">Transfer Search</string>
    <string name="menu_title_trustee_search_schedule">Trustee Search Schedule</string>
    <string name="menu_title_property_search">Property Search</string>
    <string name="menu_title_lists">Lists</string>
    <string name="menu_title_quick_search">Quick Search</string>
</resources>
