<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_quick_search"
            android:icon="@drawable/quick_search_icon"
            android:title="@string/menu_title_quick_search"/>
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/lists_icon"
            android:title="@string/menu_title_lists"/>
        <item
            android:id="@+id/nav_property_search"
            android:icon="@drawable/property_search_icon"
            android:title="@string/menu_title_property_search"/>
        <item
            android:id="@+id/nav_trustee_search_schedule"
            android:icon="@drawable/trustee_search_schedule_icon"
            android:title="@string/menu_title_trustee_search_schedule"/>
        <item
            android:id="@+id/nav_transfer_search"
            android:icon="@drawable/sold_icon"
            android:title="@string/menu_title_transfer_search"/>
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/explore_icon"
            android:title="@string/menu_title_explore"/>
    </group>


    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contact_support"
            android:icon="@drawable/contact_support_icon"
            android:title="@string/menu_title_contact_support"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/menu_title_logout"/>
        <item
            android:id="@+id/nav_user_name"
            android:title="user name"/>

    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_agreement"
            android:title="@string/menu_title_user_agreement"
            />
        <item
            android:id="@+id/nav_disclaimer"
            android:title="@string/menu_tile_disclaimer"
            />
        <item
            android:id="@+id/nav_version_number"
            android:title="@string/version_number"
            />
    </group>

</menu>
